--- a/1. preprocessing_old.ipynb
+++ b/1. preprocessing_old.ipynb
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-12T17:20:53.073444Z",
-     "start_time": "2024-05-12T17:20:51.500217400Z"
+     "end_time": "2024-05-25T06:59:44.889012100Z",
+     "start_time": "2024-05-25T06:59:44.883706800Z"
     }
    },
    "outputs": [],
@@ -67,12 +67,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-12T17:20:53.133512300Z",
-     "start_time": "2024-05-12T17:20:53.071439300Z"
+     "end_time": "2024-05-25T06:59:45.564829600Z",
+     "start_time": "2024-05-25T06:59:45.499386200Z"
     }
    },
    "id": "17fdee6222f5a5f8",
-   "execution_count": 12
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -1187,7 +1187,7 @@
    "source": [
     "plt.figure(figsize=(6, 4))\n",
     "plt.scatter(team_attributes['chanceCreationPassingClass'], team_attributes['chanceCreationPassing'],\n",
-    "            alpha=0.5)  # alpha устанавливает прозрачность точек для лучшей видимости\n",
+    "            alpha=0.5)\n",
     "plt.axhline(y=team_attributes[team_attributes['chanceCreationPassingClass'] == 'Safe']['chanceCreationPassing'].max()\n",
     "            , color='red')\n",
     "plt.axhline(y=team_attributes[team_attributes['chanceCreationPassingClass'] == 'Normal']['chanceCreationPassing'].max()\n",
@@ -1195,7 +1195,7 @@
     "plt.title('Зависимость между chanceCreationPassing и chanceCreationPassingClass')\n",
     "plt.xlabel('chanceCreationPassingClass')\n",
     "plt.ylabel('chanceCreationPassing')\n",
-    "plt.grid(True)  # Включаем сетку\n",
+    "plt.grid(True)\n",
     "plt.show()"
    ]
   },
@@ -1245,7 +1245,7 @@
    "source": [
     "plt.figure(figsize=(6, 4))\n",
     "plt.scatter(team_attributes['chanceCreationCrossingClass'], team_attributes['chanceCreationCrossing'],\n",
-    "            alpha=0.5)  # alpha устанавливает прозрачность точек для лучшей видимости\n",
+    "            alpha=0.5)\n",
     "plt.axhline(\n",
     "    y=team_attributes[team_attributes['chanceCreationCrossingClass'] == 'Little']['chanceCreationCrossing'].max()\n",
     "    , color='red')\n",
@@ -1255,7 +1255,7 @@
     "plt.title('Зависимость между chanceCreationCrossing и chanceCreationCrossingClass')\n",
     "plt.xlabel('chanceCreationCrossingClass')\n",
     "plt.ylabel('chanceCreationCrossing')\n",
-    "plt.grid(True)  # Включаем сетку\n",
+    "plt.grid(True)\n",
     "plt.show()"
    ]
   },
