--- a/3. ml.ipynb
+++ b/3. ml.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "match = pd.read_csv('match_ml.csv')"
+    "match = pd.read_csv('match_ml.csv') # https://disk.yandex.ru/d/riyyxNXKSEKxVQ"
    ],
    "metadata": {
     "collapsed": false,
