--- a/3.1 ml_class.ipynb
+++ b/3.1 ml_class.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "match = pd.read_csv('match_ml.csv')"
+    "match = pd.read_csv('match_ml.csv') # https://disk.yandex.ru/d/riyyxNXKSEKxVQ"
    ],
    "metadata": {
     "collapsed": false,
